--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ plugins:
   - jekyll-feed
   
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
 
 # Exclude from processing.
 # The following items will not be processed, by default.
