--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,7 @@ plugins:
   - jekyll-feed
   
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
-
+permalink: /blog/:title/
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
